--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <button type="button" class="hero-btn">Order Service</button>
       </section>
       <section class="features">
-        <h2 class="visually-hidden">Features</h2>
+        <h2>Features</h2>
         <ul class="features-list">
           <li class="features-list-item">
             <h3 class="features-subtitle">Strategy</h3>
