--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <header class="header">
       <nav class="header-navigation">
-        <a class="header-logo" href="./index.html"
+        <a href="./index.html" class="header-logo"
           >Web<span class="header-logo-second">Studio</span></a
         >
         <ul class="header-menu-list">
