--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
   <body>
     <header class="header">
       <nav class="header-navigation">
-        <a href="./index.html" class="header-logo"
+        <a class="header-logo" href="./index.html"
           >Web<span class="header-logo-second">Studio</span></a
         >
         <ul class="header-menu-list">
           <li class="header-menu-item">
-            <a class="header-menu-link" href="">Studio</a>
+            <a class="header-menu-link" href="./index.html">Studio</a>
           </li>
           <li class="header-menu-item">
             <a class="header-menu-link" href="">Portfolio</a>
